--- a/dotnet/SEALNet.sln.in
+++ b/dotnet/SEALNet.sln.in
@@ -1,13 +1,13 @@
 ﻿
 Microsoft Visual Studio Solution File, Format Version 12.00
-# Visual Studio Version 16
-VisualStudioVersion = 16.0.30011.22
+# Visual Studio Version 17
+VisualStudioVersion = 17.1.32228.430
 MinimumVisualStudioVersion = 10.0.40219.1
-Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "SEALNet", "src\SEALNet.csproj", "{1FA5DA9A-A2F0-4CC5-9072-5CBA2D1E3D2E}"
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "SEALNet", "@CMAKE_CURRENT_BINARY_DIR@\dotnet\src\SEALNet.csproj", "{1FA5DA9A-A2F0-4CC5-9072-5CBA2D1E3D2E}"
 EndProject
-Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "SEALNetExamples", "examples\SEALNetExamples.csproj", "{4D86EEEA-D0CA-46F5-9199-C70A5C637739}"
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "SEALNetExamples", "@CMAKE_CURRENT_BINARY_DIR@\dotnet\examples\SEALNetExamples.csproj", "{4D86EEEA-D0CA-46F5-9199-C70A5C637739}"
 EndProject
-Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "SEALNetTest", "tests\SEALNetTest.csproj", "{BA3D23D1-93AF-40ED-9771-D4346708CD53}"
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "SEALNetTest", "@CMAKE_CURRENT_BINARY_DIR@\dotnet\tests\SEALNetTest.csproj", "{BA3D23D1-93AF-40ED-9771-D4346708CD53}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
