--- a/native/examples/CMakeLists.txt
+++ b/native/examples/CMakeLists.txt
@@ -24,10 +24,11 @@ if(SEAL_BUILD_EXAMPLES)
             ${CMAKE_CURRENT_LIST_DIR}/1_bfv_basics.cpp
             ${CMAKE_CURRENT_LIST_DIR}/2_encoders.cpp
             ${CMAKE_CURRENT_LIST_DIR}/3_levels.cpp
-            ${CMAKE_CURRENT_LIST_DIR}/4_ckks_basics.cpp
-            ${CMAKE_CURRENT_LIST_DIR}/5_rotation.cpp
-            ${CMAKE_CURRENT_LIST_DIR}/6_serialization.cpp
-            ${CMAKE_CURRENT_LIST_DIR}/7_performance.cpp
+            ${CMAKE_CURRENT_LIST_DIR}/4_bgv_basics.cpp
+            ${CMAKE_CURRENT_LIST_DIR}/5_ckks_basics.cpp
+            ${CMAKE_CURRENT_LIST_DIR}/6_rotation.cpp
+            ${CMAKE_CURRENT_LIST_DIR}/7_serialization.cpp
+            ${CMAKE_CURRENT_LIST_DIR}/8_performance.cpp
     )
 
     if(TARGET SEAL::seal)
