Don't fetch deps during build; use submodules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,7 +101,7 @@ set(SEAL_TARGETS_FILENAME ${CMAKE_CURRENT_BINARY_DIR}/cmake/SEALTargets.cmake)
 set(SEAL_CONFIG_FILENAME ${CMAKE_CURRENT_BINARY_DIR}/cmake/SEALConfig.cmake)
 set(SEAL_CONFIG_VERSION_FILENAME ${CMAKE_CURRENT_BINARY_DIR}/cmake/SEALConfigVersion.cmake)
 set(SEAL_CONFIG_H_FILENAME ${CMAKE_CURRENT_BINARY_DIR}/native/src/seal/util/config.h)
-set(SEAL_THIRDPARTY_DIR ${CMAKE_CURRENT_BINARY_DIR}/thirdparty)
+set(SEAL_THIRDPARTY_DIR ${CMAKE_SOURCE_DIR}/thirdparty)
 
 # Install
 set(SEAL_CONFIG_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/SEAL-${SEAL_VERSION_MAJOR}.${SEAL_VERSION_MINOR})
@@ -146,8 +146,7 @@ message(STATUS "SEAL_USE_MSGSL: ${SEAL_USE_MSGSL}")
 
 if(SEAL_USE_MSGSL)
     if(SEAL_BUILD_DEPS)
-        message(STATUS "Microsoft GSL: download ...")
-        seal_fetch_thirdparty_content(ExternalMSGSL)
+        include(ExternalMSGSL)
     else()
         find_package(Microsoft.GSL 3 CONFIG)
         if(NOT Microsoft.GSL_FOUND)
@@ -165,8 +164,7 @@ message(STATUS "SEAL_USE_ZLIB: ${SEAL_USE_ZLIB}")
 
 if(SEAL_USE_ZLIB)
     if(SEAL_BUILD_DEPS)
-        message(STATUS "ZLIB: download ...")
-        seal_fetch_thirdparty_content(ExternalZLIB)
+        include(ExternalZLIB)
         set(zlib "zlibstatic")
     else()
         find_package(ZLIB 1.2.11)
@@ -186,8 +184,7 @@ message(STATUS "SEAL_USE_ZSTD: ${SEAL_USE_ZSTD}")
 
 if(SEAL_USE_ZSTD)
     if(SEAL_BUILD_DEPS)
-        message(STATUS "Zstandard: download ...")
-        seal_fetch_thirdparty_content(ExternalZSTD)
+        include(ExternalZSTD)
         set(zstd_static "libzstd_static")
     else()
         find_package(zstd CONFIG)
@@ -220,8 +217,7 @@ message(STATUS "SEAL_USE_INTEL_HEXL: ${SEAL_USE_INTEL_HEXL}")
 
 if(SEAL_USE_INTEL_HEXL)
     if(SEAL_BUILD_DEPS)
-        message(STATUS "Intel HEXL: download ...")
-        seal_fetch_thirdparty_content(ExternalIntelHEXL)
+        include(ExternalIntelHEXL)
     else()
         find_package(HEXL 1.2.3)
         if (NOT TARGET HEXL::hexl)
