--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,7 +149,7 @@ if(SEAL_USE_MSGSL)
         message(STATUS "Microsoft GSL: download ...")
         seal_fetch_thirdparty_content(ExternalMSGSL)
     else()
-        find_package(Microsoft.GSL 3..4 CONFIG)
+        find_package(Microsoft.GSL 4 CONFIG)
         if(NOT Microsoft.GSL_FOUND)
             message(FATAL_ERROR "Microsoft GSL: not found")
         else()
@@ -223,7 +223,7 @@ if(SEAL_USE_INTEL_HEXL)
         message(STATUS "Intel HEXL: download ...")
         seal_fetch_thirdparty_content(ExternalIntelHEXL)
     else()
-        find_package(HEXL 1)
+        find_package(HEXL 1.2.4)
         if (NOT TARGET HEXL::hexl)
             message(FATAL_ERROR "Intel HEXL: not found")
         endif()
