--- a/pipelines/android.yml
+++ b/pipelines/android.yml
@@ -1,4 +1,11 @@
 steps:
+- task: JavaToolInstaller@0
+  displayName: Use Java 11
+  inputs:
+    versionSpec: '11'
+    jdkArchitectureOption: 'x64'
+    jdkSourceOption: 'PreInstalled'
+
 - task: PowerShell@2
   displayName: Install CMake 3.18.6
   inputs:
